feat: render experience by company

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,10 +4,22 @@
         "jsx": "preserve",
         "baseUrl": ".",
         "paths": {
-            "@/*": ["*"],
-            "@/components/*": ["components/*"],
-            "@/styles/*": ["styles/*"],
+            "@/*": [
+                "*"
+            ],
+            "@/components/*": [
+                "components/*"
+            ],
+            "@/data/*": [
+                "data/*"
+            ],
+            "@/styles/*": [
+                "styles/*"
+            ],
         },
     },
-    "exclude": ["node_modules", ".next"]
+    "exclude": [
+        "node_modules",
+        ".next"
+    ]
 }
